[gd_scene load_steps=12 format=3 uid="uid://c2oyq3ropmkte"]

[ext_resource type="Script" uid="uid://y4hv76jfdsq" path="res://scripts/ajustes.gd" id="1_7snau"]
[ext_resource type="FontFile" uid="uid://cpv7bwckc7nqu" path="res://assets/Fonts/Seagram_tfb.ttf" id="2_dxi4a"]
[ext_resource type="Texture2D" uid="uid://ckenpb735uyv1" path="res://assets/Images/font.png" id="2_nv4yc"]
[ext_resource type="Texture2D" uid="uid://c8m4k5tnnhfda" path="res://assets/BckGrnd/paperallborder.png" id="4_jg833"]
[ext_resource type="Script" uid="uid://b8yohj6agvbay" path="res://scripts/btnvolver.gd" id="4_nv4yc"]
[ext_resource type="AudioStream" uid="uid://b3x4xja0k3xl7" path="res://assets/Music/Ruins.wav" id="5_jg833"]
[ext_resource type="AudioStream" uid="uid://csrdmmnm5rqwt" path="res://assets/Sounds/Fantasy_Game_Attack_Skill_Knife_Throw_B.wav" id="6_o5kyp"]
[ext_resource type="AudioStream" uid="uid://ch1yygwei47im" path="res://assets/Music/prueba.wav" id="7_nv4yc"]
[ext_resource type="AudioStream" uid="uid://b42nd1ocqfu1s" path="res://assets/Sounds/Fantasy_Game_Weapons_Wood Shield_1_Block_Defend_Buckler_Deflect.wav" id="9_2cqcg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jg833"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o5kyp"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.8923443, 0.80483663, 0.14891264, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="ajustes" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7snau")

[node name="fondo" type="TextureRect" parent="."]
modulate = Color(1, 0.7019608, 0.7019608, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.018000001
anchor_top = 0.044000003
anchor_right = 1.001
anchor_bottom = 1.0020001
offset_left = -36.736
offset_top = -85.512
offset_right = 3.8479004
offset_bottom = 465.70392
mouse_filter = 2
texture = ExtResource("2_nv4yc")
expand_mode = 4

[node name="opciones" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.054
anchor_top = 0.39400002
anchor_right = 0.938
anchor_bottom = 0.9480001
offset_left = 3.7919998
offset_top = -0.31201172
offset_right = 0.4239502
offset_bottom = -0.30407715
theme_override_constants/separation = 15

[node name="music" type="Label" parent="opciones"]
layout_mode = 2
theme_override_colors/font_color = Color(0.86315715, 0.84186804, 0.68762344, 1)
theme_override_fonts/font = ExtResource("2_dxi4a")
theme_override_font_sizes/font_size = 40
text = "Musica"
horizontal_alignment = 1

[node name="SliderMusica" type="HSlider" parent="opciones"]
modulate = Color(0.7791886, 0.7833376, 0.51790667, 1)
layout_mode = 2
value = 50.0

[node name="Efectos" type="Label" parent="opciones"]
layout_mode = 2
theme_override_colors/font_color = Color(0.86315715, 0.84186804, 0.68762344, 1)
theme_override_fonts/font = ExtResource("2_dxi4a")
theme_override_font_sizes/font_size = 40
text = "Efectos"
horizontal_alignment = 1

[node name="SliderEfectos" type="HSlider" parent="opciones"]
modulate = Color(0.7791886, 0.7833376, 0.51790667, 1)
layout_mode = 2
value = 50.0

[node name="Voces" type="Label" parent="opciones"]
layout_mode = 2
theme_override_colors/font_color = Color(0.86315715, 0.84186804, 0.68762344, 1)
theme_override_fonts/font = ExtResource("2_dxi4a")
theme_override_font_sizes/font_size = 40
text = "Voces"
horizontal_alignment = 1

[node name="SliderVoces" type="HSlider" parent="opciones"]
modulate = Color(0.7791886, 0.7833376, 0.51790667, 1)
layout_mode = 2
value = 50.0

[node name="BtnVolver" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.010000001
anchor_top = 0.023000002
anchor_right = 0.133
anchor_bottom = 0.12200001
offset_left = 5.4799995
offset_top = 6.095999
offset_right = 11.783997
offset_bottom = 9.943993
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_jg833")
theme_override_styles/hover = SubResource("StyleBoxFlat_o5kyp")
script = ExtResource("4_nv4yc")

[node name="Fondo" type="TextureRect" parent="BtnVolver"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 143.0
offset_bottom = 63.0
texture = ExtResource("4_jg833")
expand_mode = 1

[node name="texto" type="Label" parent="BtnVolver"]
layout_mode = 0
offset_left = 20.0
offset_top = 7.0
offset_right = 126.0
offset_bottom = 58.0
theme_override_colors/font_color = Color(0.627451, 0.52156866, 0.105882354, 1)
theme_override_fonts/font = ExtResource("2_dxi4a")
theme_override_font_sizes/font_size = 40
text = "Atras"
horizontal_alignment = 1

[node name="HoverSound" type="AudioStreamPlayer" parent="BtnVolver"]
stream = ExtResource("9_2cqcg")
volume_db = -1.0
bus = &"SFX"

[node name="PreviewMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_jg833")
bus = &"Music"

[node name="PreviewEfectos" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_o5kyp")
bus = &"SFX"

[node name="PreviewVoces" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_nv4yc")
bus = &"Voces"

[connection signal="pressed" from="BtnVolver" to="." method="_on_btn_volver_pressed"]
